修改目录格式、新增cookie相关练习

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <servlet>
         <servlet-name>HelloServlet</servlet-name>
-        <servlet-class>com.gai.HelloServlet</servlet-class>
+        <servlet-class>com.gai.servlet.HelloServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>HelloServlet</servlet-name>
